test/negative/703_variant_pat_nonvariant.err
703_variant_pat_nonvariant.fx:2:21: error: the appropriate match for 'Some' of type '(<unknown> -> int)' is not found.
Candidates:
 Some(T) -> T option@12 [generic: T] @ Builtins.fx:L:C -- the return type or the signature as a whole does not match

 2 | val x = match 5 { | Some y => 1 | _ => 0 }
   |                     ^~~~

1 errors occured during type checking.
